[project]
name = "rmc"
version = "0.1.1"
description = "Convert to/from v6 .rm files from the reMarkable tablet"
readme = "README.md"
authors = [
    { name = "Rick Lupton", email = "mail@ricklupton.name" },
    { name = "Chenghao Mou", email = "chenghaomou@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rmscene",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.uv.sources]
rmscene = { path = "../rmscene", editable = true }
